# forget-code

./: .gitignore  Cargo.toml  Docker and Now.txt  GoogleCloud.txt  README.md
AWS/: LearnAWS.md
Bash/: LearnBash.md  Linux Phrasebook - (the speedy version).ipynb  newSection.sh
JavaScript/: LearnJavaScript.md  inheritance.js  learnHTML.html  learn_javascript.js
Python/: LearnPython.md  POTW - Ipywidgets.ipynb  POTW - plotly.ipynb  POTW - tqmd.ipynb  ab_testing.ipynb  example.csv  exampleCSV.csv  exampleFile.txt  exampleModule.py  example_dict.pickle  learnPandas.ipynb  learnPandas.py  learnPython.ipynb  machine_learning_implementation.ipynb
R/: LearnR.md  learnR.R
rust/: Cargo.toml  README.md  rust-summary.md
rust/control-flow/src/: main.rs
rust/enums/src/: main.rs
rust/exploration/basics/: Cargo.toml
rust/exploration/basics/src/: main.rs
rust/exploration/collections/src/: main.rs
rust/exploration/control-flow/: Cargo.toml
rust/exploration/control-flow/src/: main.rs
rust/exploration/enums/src/: main.rs
rust/exploration/errors/src/: main.rs
rust/exploration/generics/: Cargo.toml
rust/exploration/generics/src/: main.rs
rust/exploration/hello-world/: main.rs
rust/exploration/human-struct/: Cargo.toml
rust/exploration/human-struct/src/: main.rs
rust/exploration/leet/src/: main.rs
rust/exploration/modules/src/: lib.rs  main.rs  one_rebel.rs  tennis_club.rs
rust/exploration/modules/src/one_rebel/: mod.rs  reshape.rs
rust/exploration/ownership/src/: main.rs
rust/exploration/structs/src/: main.rs
rust/ownership/src/: main.rs
(+57 files in other folders)
