# vscode needs the cargo in the root
# You can run a sub project with $cargo run -p leet

[workspace]
resolver = "2"

members = [
    "exploration/basics",
    "exploration/enums",
    "exploration/structs",
    "exploration/ownership",
    "exploration/modules",
    "exploration/collections",
    "exploration/errors",
    "exploration/leet",
]
